Changes to Book Repo